<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YCP Games</string>
    <string name="action_settings">Settings</string>
    <string name="TicTacToe">TODO: TicTacToe</string>
    <string name="Dots">TODO: Dots</string>
    <string name="Checkers">TODO: Checkers</string>
    <string name="Settings">TODO: Settings</string>
    <string name="YCP_Games">YCP Games</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <string name="top_left">TOP LEFT</string>
    <string name="game_over">Game Over!</string>
    <string name="comp_win">Computer has won.\nWould you like to play again?</string>
    <string name="player_win">You\'ve won!\nWould you like to play again?</string>
    <string name="draw">It\'s a draw!\nWould you like to play again?</string>
    <string name="title_activity_dots">DotsActivity</string>
    <string name="player2_win">Player 2 (\"<b>O</b>\") has won!\nWould You like to play again?</string>
    <string name="player1_win">Player 1 (\"<b>X</b>\") has won!\nWould You like to play again?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general">General Settings</string>
    <string name="single_player_pref">Single Player</string>
    <string name="single_player_summ">Single player is enabled.</string>
    <string name="multi_player_summ">Multi-player is enabled.</string>
    <string name="difficulty_pref">Difficulty</string>
    <string name="easy_diff_summ">Easy mode</string>
    <string name="normal_diff_summ">Normal Mode</string>
    <string name="hard_diff_summ">Hard Mode</string>
    <string name="grid_size_pref">Grid Size (Dots)</string>
    <string name="grid_width_pref">Grid Width</string>
    <string name="grid_height_pref">Grid Height</string>
    <string name="grid_height_dialog">Please choose the height of the grid:</string>
    <string name="grid_width_dialog">Please choose the width of the grid:</string>
    <string name="difficulty_dialog_title">Choose Difficulty:</string>
    <string name="title_activity_checkers">CheckersActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
